Updated class selector names and changed height properties of images / divs in efforts to prevent overflow.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,33 +34,36 @@ main {
     position: absolute;
 }
 
-.img-style {
+img {
     width: 200px;
     height: 200px;
+    padding: 10px;
+}
+
+.img-float-right {
     float: right;
 }
 
-.img-style-2 {
-    width: 200px;
-    height: 200px;
+.img-float-left{
     float: left;
 }
 
+
 #egypt-intro {
     width:100%;
-    height: 450px;
+    height: 400px;
     background-color: palegreen;
 }
 
 #egypt-pyramids{
     width: 100%;
-    height: 650px;
+    height: 750px;
     background-color: palegoldenrod;
 }
 
 #egypt-hieroglyphics {
     width:100%;
-    height: 400px;
+    height: 500px;
     background-color: paleturquoise;
 }
 
